[gd_scene load_steps=36 format=3 uid="uid://cyjqh1fqgjjdj"]

[ext_resource type="PackedScene" uid="uid://dqnkqd4qp7f7m" path="res://scenes/bubble/bubble.tscn" id="1_he28o"]
[ext_resource type="Script" uid="uid://gqr7c0y0sk10" path="res://scenes/tutorial/tutorial.gd" id="1_r23bs"]
[ext_resource type="PackedScene" uid="uid://u2yqcyw42i0w" path="res://assets/models/lilypad-village.gltf" id="2_jaenq"]
[ext_resource type="Shader" uid="uid://bsj84wpdeopvn" path="res://assets/shaders/water.gdshader" id="3_bmltb"]
[ext_resource type="FontFile" uid="uid://dksn3jfeg2fc3" path="res://assets/fonts/HappyMonkey-Regular.ttf" id="4_g40di"]
[ext_resource type="AudioStream" uid="uid://bmjmlg0balwvv" path="res://assets/audio/tutorial_ambiance.ogg" id="6_pq3l0"]
[ext_resource type="PackedScene" uid="uid://cdwweuc7vx1bi" path="res://assets/models/hat.gltf" id="7_g7eoy"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_bmltb"]
albedo_color = Color(0.235294, 0.639216, 0.439216, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_g40di"]
albedo_color = Color(1, 0.709804, 0.709804, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_r23bs"]
albedo_color = Color(0.921569, 0.337255, 0.294118, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_pq3l0"]
albedo_color = Color(0.890196, 0.411765, 0.337255, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_g7eoy"]
albedo_color = Color(1, 1, 0.921569, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ha56g"]
albedo_color = Color(0.301961, 0.65098, 1, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_4nriy"]
albedo_color = Color(0.811765, 1, 0.439216, 1)

[sub_resource type="PlaneMesh" id="PlaneMesh_g40di"]
size = Vector2(18, 40)
subdivide_width = 10
subdivide_depth = 10

[sub_resource type="Gradient" id="Gradient_r23bs"]
offsets = PackedFloat32Array(0)
colors = PackedColorArray(0, 0, 0, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_g7eoy"]
gradient = SubResource("Gradient_r23bs")

[sub_resource type="GradientTexture1D" id="GradientTexture1D_ha56g"]
gradient = SubResource("Gradient_r23bs")

[sub_resource type="GradientTexture1D" id="GradientTexture1D_4nriy"]
gradient = SubResource("Gradient_r23bs")

[sub_resource type="FastNoiseLite" id="FastNoiseLite_pq3l0"]

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_hsofu"]
seamless = true
as_normal_map = true
noise = SubResource("FastNoiseLite_pq3l0")

[sub_resource type="FastNoiseLite" id="FastNoiseLite_g7eoy"]
seed = 255
frequency = 0.005

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_sr6ah"]
seamless = true
as_normal_map = true
noise = SubResource("FastNoiseLite_g7eoy")

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_ks8yg"]
seamless = true
as_normal_map = true
noise = SubResource("FastNoiseLite_pq3l0")

[sub_resource type="FastNoiseLite" id="FastNoiseLite_ha56g"]
seed = 230
frequency = 0.0463

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_xjdtc"]
seamless = true
as_normal_map = true
noise = SubResource("FastNoiseLite_ha56g")

[sub_resource type="FastNoiseLite" id="FastNoiseLite_4nriy"]
seed = 135
frequency = 0.013

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_afypq"]
seamless = true
as_normal_map = true
noise = SubResource("FastNoiseLite_4nriy")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_hsofu"]
render_priority = 0
shader = ExtResource("3_bmltb")
shader_parameter/sync_time = null
shader_parameter/wave_speed = 0.05
shader_parameter/caustic_speed = 0.01
shader_parameter/edge_fade_power = 1.0
shader_parameter/transmittence = 0.05
shader_parameter/h_dist_trans_weight = 3.0
shader_parameter/transmit_color = null
shader_parameter/depth_fade = 0.3
shader_parameter/depth_fade_distance = 5.0
shader_parameter/surface_albedo = Color(0.4, 1, 0.890196, 1)
shader_parameter/surface_bottom = Color(0.301961, 0.65098, 1, 1)
shader_parameter/opacity = 0.4
shader_parameter/opacity_floor = 0.1
shader_parameter/opacity_ceiling = 0.8
shader_parameter/roughness = 0.4
shader_parameter/height_scale = 1.0
shader_parameter/amplitude1 = 0.0
shader_parameter/amplitude2 = 0.2
shader_parameter/vertex_noise_big = SubResource("NoiseTexture2D_xjdtc")
shader_parameter/vertex_noise_big2 = SubResource("NoiseTexture2D_afypq")
shader_parameter/v_noise_tile = 200
shader_parameter/normal_noise = SubResource("NoiseTexture2D_hsofu")
shader_parameter/normal_noise2 = SubResource("NoiseTexture2D_sr6ah")
shader_parameter/normal_noise_size = 5.12
shader_parameter/normal_noise_speed = 0.005
shader_parameter/v_normal_scale = 1.0
shader_parameter/normal_map_w = 256
shader_parameter/wobble_power = 0.01
shader_parameter/under_wobble_noise = SubResource("NoiseTexture2D_ks8yg")
shader_parameter/sky_color = null
shader_parameter/foam_color = null
shader_parameter/foam = SubResource("GradientTexture1D_g7eoy")
shader_parameter/foam_mask = SubResource("GradientTexture1D_ha56g")
shader_parameter/foam_mask_size = null
shader_parameter/foam_mask_offset = Vector2(0, 0)
shader_parameter/foam_wobble = 0.01
shader_parameter/foam_wobble_noise = SubResource("GradientTexture1D_4nriy")
shader_parameter/foam_wobble_size = 10.0
shader_parameter/high_color = Color(0.4, 1, 0.890196, 1)
shader_parameter/low_color = Color(0.301961, 0.65098, 1, 1)
shader_parameter/wave_color_range = 2.0
shader_parameter/enable_fake_lighting = false
shader_parameter/shine_strength = 0.17
shader_parameter/shine_shininess = 18.0
shader_parameter/shadow = 0.72
shader_parameter/shadow_width = 0.18
shader_parameter/shadow_color = Color(0.705, 0.705, 0.705, 0.705)
shader_parameter/_specular_smoothness = 0.199
shader_parameter/_specular_strength = 0.075
shader_parameter/_glossiness = 0.067

[sub_resource type="BoxShape3D" id="BoxShape3D_sr6ah"]
size = Vector3(13.95, 1, 45.11)

[sub_resource type="BoxShape3D" id="BoxShape3D_ks8yg"]
size = Vector3(13.95, 4.26611, 50.0061)

[sub_resource type="BoxShape3D" id="BoxShape3D_xjdtc"]
size = Vector3(5.235, 0.663086, 13.3301)

[sub_resource type="Environment" id="Environment_bmltb"]
background_mode = 1
background_color = Color(0.278431, 0.231373, 0.470588, 1)
ambient_light_color = Color(0.301961, 0.65098, 1, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_g7eoy"]
size = Vector3(0.2, 0.2, 0.2)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_hsofu"]
albedo_color = Color(0.301961, 0.65098, 1, 1)

[node name="Tutorial" type="Node3D"]
script = ExtResource("1_r23bs")

[node name="Bubble" parent="." instance=ExtResource("1_he28o")]
transform = Transform3D(0.606863, 0, 0.794807, 0, 1, 0, -0.794807, 0, 0.606863, -13.1375, 13.8224, 23.82)

[node name="lilypad-village" parent="." instance=ExtResource("2_jaenq")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.68137, 0, -0.861088)

[node name="Cylinder" parent="lilypad-village" index="0"]
layers = 3
surface_material_override/0 = SubResource("StandardMaterial3D_bmltb")

[node name="StaticBody3D" parent="lilypad-village/Cylinder" index="0"]
collision_layer = 3

[node name="Cube" parent="lilypad-village" index="1"]
surface_material_override/0 = SubResource("StandardMaterial3D_g40di")

[node name="StaticBody3D" parent="lilypad-village/Cube" index="0"]
collision_layer = 3

[node name="Cylinder_001" parent="lilypad-village" index="2"]
surface_material_override/0 = SubResource("StandardMaterial3D_r23bs")

[node name="StaticBody3D" parent="lilypad-village/Cylinder_001" index="0"]
collision_layer = 3

[node name="Cylinder_002" parent="lilypad-village" index="3"]
surface_material_override/0 = SubResource("StandardMaterial3D_pq3l0")

[node name="StaticBody3D" parent="lilypad-village/Cylinder_002" index="0"]
collision_layer = 3

[node name="Cube_001" parent="lilypad-village" index="4"]
surface_material_override/0 = SubResource("StandardMaterial3D_g7eoy")

[node name="StaticBody3D" parent="lilypad-village/Cube_001" index="0"]
collision_layer = 3

[node name="Cylinder_003" parent="lilypad-village" index="5"]
surface_material_override/0 = SubResource("StandardMaterial3D_r23bs")

[node name="StaticBody3D" parent="lilypad-village/Cylinder_003" index="0"]
collision_layer = 3

[node name="Cube_002" parent="lilypad-village" index="6"]
surface_material_override/0 = SubResource("StandardMaterial3D_ha56g")

[node name="StaticBody3D" parent="lilypad-village/Cube_002" index="0"]
collision_layer = 3

[node name="Icosphere_002" parent="lilypad-village" index="7"]
visible = false

[node name="Cylinder_004" parent="lilypad-village" index="8"]
surface_material_override/0 = SubResource("StandardMaterial3D_4nriy")

[node name="Cylinder_005" parent="lilypad-village/Cylinder_004" index="0"]
visible = false

[node name="StaticBody3D" parent="lilypad-village/Cylinder_004" index="1"]
collision_layer = 3

[node name="MeshInstance3D2" type="MeshInstance3D" parent="lilypad-village"]
transform = Transform3D(0.599315, -3.20563e-09, -0.116316, 2.07421e-09, 1, -3.34486e-10, 0.527216, -2.90269e-10, 0.132223, 0.00767553, 2.30378, -0.0386686)
mesh = SubResource("PlaneMesh_g40di")
skeleton = NodePath("../..")
surface_material_override/0 = SubResource("ShaderMaterial_hsofu")

[node name="Area3D" type="Area3D" parent="lilypad-village/MeshInstance3D2"]
collision_layer = 4
collision_mask = 128
gravity_space_override = 3
gravity_point_center = Vector3(0, 1, 0)
gravity_direction = Vector3(0, 1, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="lilypad-village/MeshInstance3D2/Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.863072, 11.4914)
shape = SubResource("BoxShape3D_sr6ah")

[node name="CollisionShape3D3" type="CollisionShape3D" parent="lilypad-village/MeshInstance3D2/Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -2.49613, 13.6029)
shape = SubResource("BoxShape3D_ks8yg")

[node name="CollisionShape3D2" type="CollisionShape3D" parent="lilypad-village/MeshInstance3D2/Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.694615, -13.5686)
shape = SubResource("BoxShape3D_xjdtc")

[node name="OmniLight3D" type="OmniLight3D" parent="lilypad-village"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.221773, 3.78344, -5.31447)
light_color = Color(1, 1, 0.392157, 1)

[node name="OmniLight3D2" type="OmniLight3D" parent="lilypad-village"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.80576, 3.78344, -4.58219)
light_color = Color(1, 1, 0.392157, 1)

[node name="OmniLight3D3" type="OmniLight3D" parent="lilypad-village"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5.34355, 3.78344, -1.4822)
light_color = Color(1, 1, 0.392157, 1)

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_bmltb")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="RichTextLabel" type="RichTextLabel" parent="CanvasLayer"]
offset_right = 571.0
offset_bottom = 398.0
theme_override_fonts/normal_font = ExtResource("4_g40di")
theme_override_font_sizes/normal_font_size = 19
bbcode_enabled = true
text = "Move Up (W / D-Up)
Move Down (S / D-Down)
Move Left (A / D-Left)
Move Right (D / D-Right)
Move Forward (Left Click / R Bumper)
Move Backward (Right Click / L Bumper)
Restart (R / Select)
Pop (Space / X Button)
Land and Relax..."

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
modulate = Color(1, 1, 1, 0)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 1)

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_pq3l0")
autoplay = true

[node name="StaticBody3D" type="StaticBody3D" parent="."]
transform = Transform3D(0.991142, 0.132309, 0.0115267, -0.132806, 0.986684, 0.0938955, 0.00105003, -0.0945945, 0.995515, 4.53916, 1.89982, -8.05763)
collision_layer = 3

[node name="CollisionShape3D" type="CollisionShape3D" parent="StaticBody3D"]
transform = Transform3D(0.999974, -1.12654e-07, -4.77303e-09, -5.29981e-08, 0.999975, 1.9744e-06, -1.86265e-09, -2.45869e-07, 0.99998, -0.0113683, -0.120275, 0.0297012)
shape = SubResource("BoxShape3D_g7eoy")

[node name="hat" parent="." instance=ExtResource("7_g7eoy")]
transform = Transform3D(0.991142, 0.132309, 0.0115267, -0.132806, 0.986684, 0.0938955, 0.00105003, -0.0945945, 0.995515, 4.53916, 1.93832, -8.05765)

[node name="Cylinder" parent="hat" index="0"]
transform = Transform3D(1, 3.95084e-09, 1.62981e-09, 3.9945e-09, 1, 0, -1.74623e-09, 7.45058e-09, 1, 0.00511169, -0.0379829, -0.0036087)
surface_material_override/0 = SubResource("StandardMaterial3D_hsofu")

[connection signal="calculate_score" from="Bubble" to="." method="_on_bubble_calculate_score"]
[connection signal="frog_popped" from="Bubble" to="." method="_on_bubble_frog_popped"]
[connection signal="restart" from="Bubble" to="." method="_on_bubble_restart"]
[connection signal="tap_inputted" from="Bubble" to="." method="_on_bubble_tap_inputted"]

[editable path="lilypad-village"]
[editable path="hat"]
